--- a/src/_includes/components/footer.html
+++ b/src/_includes/components/footer.html
@@ -183,7 +183,9 @@
         <div class="text-center mt-6 text-brand-body1 text-sm">
           <div>
             Already have an account?
-            <a href="#" class="text-brand-accent font-bold">Login</a>
+            <a href="#" class="text-brand-accent font-semibold underline"
+              >Login</a
+            >
           </div>
           <div class="mt-4 font-inter">
             By clicking Subscribe you are agreeing to our
@@ -253,7 +255,7 @@
       </button>
       <div class="text-center mt-6 text-brand-body1 text-sm">
         Already have an account?
-        <a href="#" class="text-brand-accent font-bold">Login</a>
+        <a href="#" class="text-brand-accent font-semibold underline">Login</a>
       </div>
     </div>
   </div>
