--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -28,6 +28,7 @@
       href="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.css"
     />
     <script src="https://cdn.jsdelivr.net/gh/mdbassit/Coloris@latest/dist/coloris.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/imask/3.4.0/imask.min.js"></script>
 
     <!-- Tailwind helpers -->
     <div class="hidden">
